[Material] add material design with an AppBar

--- a/app/index.html
+++ b/app/index.html
@@ -1,8 +1,9 @@
 <!DOCTYPE html>
 <html lang="fr">
 <head>
-    <meta charset="UTF-8">
-    <title>Picsou</title>
+  <meta charset="UTF-8">
+  <title>Picsou</title>
+  <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700">
 </head>
 <body>
 
